--- a/package.json
+++ b/package.json
@@ -7,16 +7,23 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "ios:pod-clean": "cd ios && rm -rf Pods && rm -rf Podfile.lock && pod install --repo-update && cd ..",
+    "ios:pod": "pod install --project-directory=ios"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
     "react": "18.2.0",
-    "react-native": "0.74.0"
+    "react-native": "0.74.0",
+    "react-native-safe-area-context": "^4.10.1",
+    "react-native-screens": "^3.31.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
+    "@react-native-community/eslint-config": "^3.2.0",
     "@react-native/babel-preset": "0.74.81",
     "@react-native/eslint-config": "0.74.81",
     "@react-native/metro-config": "0.74.81",
@@ -24,9 +31,14 @@
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
-    "eslint": "^8.19.0",
+    "eslint": "^9.1.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react-hooks": "^4.6.1",
+    "eslint-plugin-react-native": "^4.1.0",
     "jest": "^29.6.3",
-    "prettier": "2.8.8",
+    "prettier": "^3.2.5",
     "react-test-renderer": "18.2.0",
     "typescript": "5.0.4"
   },
